--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
 
     <!-- and it's easy to individually load additional languages -->
+    <meta name="google-site-verification" content="OCH-wT6y8NGSfFTg1OneAu5otYFhPz_Qjq-ktPVuxlI" />
   </head>
   <body>
     <app-root></app-root>
